Add addons support
* Fix changelog back button
* few changes in layouts

Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,6 +41,12 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".AddonsActivity"
+            android:label="@string/addons_title"
+            android:excludeFromRecents="true"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".LocalChangelogActivity"
             android:excludeFromRecents="true"
             android:label="@string/menu_show_changelog"
