Update: Add support for local installation
Signed-off-by: Shubham Singh <coolsks94@gmail.com>
Change-Id: I2b6ab68bc222c518bf1783eb75ba384521dd2372

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,13 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".LocalInstallationActivity"
+            android:excludeFromRecents="true"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
+
         <service android:name=".controller.UpdaterService" />
         <service android:name=".ExportUpdateService" />
 
